# zequal

./: Cargo.toml  Dockerfile  README.md  zequal.py
analysis_utils/: Cargo.toml
cfg/: Cargo.toml
cfg/src/: block.rs  cfg.rs  edge.rs  error.rs  finite_fields.rs  lib.rs  named_storage.rs  program_formatter.rs  storage_type.rs  template.rs
cfg/src/expr/: binop.rs  expression.rs  function_call.rs  instantiate.rs  invariant.rs  literal.rs  mod.rs  ternary.rs  unop.rs  var_access.rs  variable_ref.rs
cfg/src/stmt/: assert.rs  assign_sig.rs  assign_var.rs  assume.rs  constrain.rs  declaration.rs  log_to_invariant.rs  mod.rs  statement.rs
examples/circomlib/: binsum.circom  escalarmul.circom  escalarmulany.circom  escalarmulfix.circom  main1.circom  main10.circom  main100.circom  (+106 more)
static_analysis/: Cargo.toml
static_analysis/src/: analysis.rs  lib.rs
static_analysis/src/context_sensitivity/: context_insensitive_analysis.rs  mod.rs
static_analysis/src/domains/: mod.rs
static_analysis/src/domains/equivalence/: equivalence_analysis.rs  equivalence_transformer.rs  equivalence_value.rs  mod.rs
static_analysis/src/domains/interval/: bounded_ref.rs  interval_analysis.rs  interval_transformer.rs  interval_value.rs  mod.rs
static_analysis/src/domains/interval/infinite_number/: infinite_bigint.rs  infinite_number.rs  mod.rs  symbolic_infinite_bigint.rs
static_analysis/src/domains/symbolic_value/: mod.rs  symbolic_value.rs
static_analysis/src/utils/: circom_abstract_state.rs  circom_value.rs  generic_abstract_state.rs  mod.rs
vc_gen/: Cargo.toml
vc_gen/src/: basic_vc_gen.rs  lib.rs
vc_gen/src/hoare_logic/: mod.rs  sp.rs  vc_generator.rs
vc_gen/src/interpreter/: expression_interpreter.rs  invariant_interpreter.rs  mod.rs
vc_gen/src/inv_gen/: candidate_gen.rs  houdini.rs  loop_summary.rs  mod.rs
vc_gen/src/smt/: array.rs  bool.rs  error.rs  int.rs  mod.rs  smt.rs  uninterpreted_fn.rs
vc_gen/src/smt/finite_field/: ff_impl.rs  finite_field.rs  int_impl.rs  mod.rs
vc_gen/src/solver/: mod.rs  solver.rs  solver_utils.rs
vc_gen/src/utils/: callstack_entry.rs  condition_term.rs  error.rs  mod.rs  template_context.rs  var_utils.rs  wrapped_smt_term.rs
verify/: Cargo.toml
verify/src/: input_user.rs  main.rs  parser_user.rs  program_formatter.rs  type_analysis_user.rs
(+7 files in other folders)
